// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`journey methods renders a journey row 1`] = `
<Translate(RowSwipeable)
  bump={false}
  onBumpComplete={undefined}
  onEdit={[Function]}
>
  <Translate(JourneyItem)
    item={
      Object {
        "id": "123",
        "text": "123",
      }
    }
    type={undefined}
  />
</Translate(RowSwipeable)>
`;

exports[`journey methods renders a survey row 1`] = `
<Translate(JourneyItem)
  item={
    Object {
      "id": "124",
      "text": "124",
      "type": "survey",
    }
  }
  type="survey"
/>
`;

exports[`journey methods renders a survey row 2`] = `
<Translate(JourneyItem)
  item={
    Object {
      "id": "124",
      "text": "124",
      "type": "stage",
    }
  }
  type="stage"
/>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "AmaticSC-Bold",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 70,
              "paddingVertical": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        loading journey items
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          ADD A COMMENT
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders with an organization correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "AmaticSC-Bold",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "paddingHorizontal": 70,
              "paddingVertical": 10,
              "textAlign": "center",
            },
          ]
        }
      >
        loading journey items
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {},
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          ADD A COMMENT
        </Text>
      </View>
    </View>
  </View>
</View>
`;
